--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "express-validator": "^7.2.1",
         "mongodb": "^3.1.6",
         "mongoose": "^8.13.1",
+        "multer": "^2.0.2",
         "nodemailer": "^6.10.0"
     }
 }
