--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "devDependencies": {
         "@types/express": "^5.0.0",
         "@types/node": "^22.13.1",
+        "@types/pdfkit": "^0.17.3",
         "@types/sequelize": "^4.28.20",
         "nodemon": "^3.1.9"
     },
@@ -30,6 +31,7 @@
         "mongodb": "^3.1.6",
         "mongoose": "^8.13.1",
         "multer": "^2.0.2",
-        "nodemailer": "^6.10.0"
+        "nodemailer": "^6.10.0",
+        "pdfkit": "^0.17.2"
     }
 }
